<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:weightSum="100">

    <TextView
        android:id="@+id/tv_no"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:gravity="left"
        android:paddingLeft="5dp"
        android:layout_gravity="center"
        android:text="@string/no"/>

    <TextView
        android:id="@+id/tv_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="30"
        android:layout_gravity="center"
        android:gravity="left"
        android:text="@string/account"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="30"
        android:layout_gravity="center"
        android:gravity="left"
        android:text="@string/name"/>

    <TextView
        android:id="@+id/tv_role"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="20"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/permission"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/delete" />

    </LinearLayout>

</TableRow>