<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="3dp"
    android:weightSum="100">

    <TextView
        android:id="@+id/tv_no"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="8"
        android:gravity="left"
        android:text="@string/no"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_weight="15"
        android:layout_gravity="center"
        android:gravity="center">

        <ImageView
            android:id="@+id/img_carType"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="left|center_vertical"
            android:scaleType="centerInside"
            android:src="@drawable/carin" />

    </LinearLayout>


    <TextView
        android:id="@+id/tv_lisence_plate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="28"
        android:gravity="left"
        android:paddingLeft="2dp"
        android:text="@string/lisence_plate_row"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="48"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:paddingLeft="2dp"
                android:text="@string/in"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_timeIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:paddingLeft="2dp"
                android:text="@string/time"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:paddingLeft="2dp"
                android:text="@string/out"
                android:textColor="@color/black" />


            <TextView
                android:id="@+id/tv_timeOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:paddingLeft="2dp"
                android:text="@string/time"
                android:textColor="@color/black" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>