<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:weightSum="100">

    <TextView
        android:id="@+id/tv_no"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:gravity="left"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:text="@string/no"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_weight="15"
        android:layout_gravity="center"
        android:gravity="center">

        <ImageView
            android:id="@+id/img_carType"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="left|center_vertical"
            android:scaleType="centerInside"
            android:src="@drawable/carin" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_lisence_plate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="30"
        android:layout_gravity="center"
        android:gravity="left"
        android:textColor="@color/black"
        android:text="@string/lisence_plate_row"/>

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="45"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="@string/time"/>


</TableRow>