<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="3dp"
    android:weightSum="100">

    <TextView
        android:id="@+id/tv_no"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="8"
        android:gravity="left"
        android:text="@string/no"
        android:textColor="@color/black" />


    <TextView
        android:id="@+id/tv_userId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="13"
        android:gravity="left"
        android:text="1"
        android:textColor="@color/black" />


    <TextView
        android:id="@+id/tv_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="24"
        android:gravity="left"
        android:text="dinhbkhn"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="50"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:paddingLeft="2dp"
                android:text="@string/login_row"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_timeIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:paddingLeft="2dp"
                android:text="@string/time"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:paddingLeft="2dp"
                android:text="@string/logout_row"
                android:textColor="@color/black" />


            <TextView
                android:id="@+id/tv_timeOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:paddingLeft="2dp"
                android:text="@string/time"
                android:textColor="@color/black" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>